fix width to avoid button ttoo close to text

--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -731,7 +731,7 @@ input.classifai-button {
 	}
 }
 .classify-modal {
-    max-width: 500px;
+    width: 500px;
 
 	hr {
 		margin-bottom: 20px;
